# apps/api/docs/swagger.json
@@ -59,7 +59,7 @@
       "get": {
         "description": "Retrieve a list of all main types",
         "produces": ["application/json"],
-        "tags": ["MainType"],
+        "tags": ["MainTypes"],
         "summary": "Get all main types",
         "responses": {
           "201": {
@@ -86,7 +86,7 @@
         "description": "Create a new main type",
         "consumes": ["application/json"],
         "produces": ["application/json"],
-        "tags": ["MainType"],
+        "tags": ["MainTypes"],
         "summary": "Create mainType",
         "parameters": [
           {
@@ -114,6 +114,49 @@
           },
           "409": {
             "description": "Catégorie déjà existante",
+            "schema": {
+              "$ref": "#/definitions/request.ErrorRequest"
+            }
+          },
+          "500": {
+            "description": "Erreur interne",
+            "schema": {
+              "$ref": "#/definitions/request.ErrorRequest"
+            }
+          }
+        }
+      }
+    },
+    "/mainTypes/{mainTypeId}": {
+      "delete": {
+        "description": "Delete a main type by id",
+        "produces": ["application/json"],
+        "tags": ["MainTypes"],
+        "summary": "Delete main type by id",
+        "parameters": [
+          {
+            "type": "integer",
+            "description": "Main Type ID",
+            "name": "mainTypeId",
+            "in": "path",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Catégorie supprimée avec succés",
+            "schema": {
+              "$ref": "#/definitions/request.SuccessDeleteRequest"
+            }
+          },
+          "400": {
+            "description": "ID invalide",
+            "schema": {
+              "$ref": "#/definitions/request.ErrorRequest"
+            }
+          },
+          "404": {
+            "description": "Catégorie non trouvée",
             "schema": {
               "$ref": "#/definitions/request.ErrorRequest"
             }
@@ -236,7 +279,7 @@
         }
       }
     },
-    "/subtypes/{subTypeId}": {
+    "/subTypes/{subTypeId}": {
       "delete": {
         "description": "Delete a subtype by id",
         "produces": ["application/json"],
